# GroupG_Project

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/annot_consistency/: cli.py  diff.py  gffutils_db.py  html.py  io.py  logging_utils.py  models.py
src/gffacake/: __init__.py
tests/: test_cli_integration.py  test_diff.py  test_gffutils_db.py  test_io.py
tests/fixture_releases/: release_A.gff3  release_B.gff3  test_models_logger.py
