[project]
name = "gffACAKE"
version = "0.5.0"
description = "Compares two GFF3 annotation releases and reports added/removed/changed features"
requires-python = ">=3.12"
readme = "README.md"
authors = [
    {name = "Almarc Astorga"},
    {name = "Ishwar Bijumon"},
    {name = "Krishna Sameer Krothapalli"},
    {name = "Saheshnu Sai Balaji Pillai"}
]

dependencies = ["gffutils >= 0.13"]

[build-system]
requires = ["uv-build"]
build-backend = "uv_build"

[project.urls]
Homepage = "https://github.com/biol5472-uofglasgow/GroupG_Project"

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "ruff>=0.4", "mypy>=1.6"]

[project.scripts]
gffACAKE = "annot_consistency.cli:main"

[tool.setuptools.packagesfind]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --cov=annot_consistency --cov-report=term-missing"

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
warn_return_any = true
ignore_missing_imports = true
show_error_codes = true
pretty = true
strict = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []